@@ -1,14 +1,14 @@
 package bjorn.petprojects.recipes.controllers;
 
 import bjorn.petprojects.recipes.commands.RecipeCommand;
+import bjorn.petprojects.recipes.exceptions.NotFoundException;
 import bjorn.petprojects.recipes.services.RecipeService;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.ModelAndView;
 
 /**
  * Created by jt on 6/19/17.
@@ -26,7 +26,7 @@ public class RecipeController {
     @GetMapping("/recipe/{id}/show")
     public String showById(@PathVariable String id, Model model){
 
-        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
 
         return "recipe/show";
     }
@@ -54,5 +54,30 @@ public class RecipeController {
         log.debug("Deleting recipe with id : "+id);
         recipeService.deleteById(Long.valueOf(id));
         return "redirect:/";
+    }
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    @ExceptionHandler(NotFoundException.class)
+    public ModelAndView handleNotFound(Exception exception){
+        return GenerateModelAndViewForExceptions(exception, "Handling not found exception", "404error");
+    }
+
+
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    @ExceptionHandler(NumberFormatException.class)
+    public ModelAndView handleNumberFormatException(Exception exception){
+        return GenerateModelAndViewForExceptions(exception, "Handling NumberFormatException", "400error");
+    }
+
+    /*
+     *Helper method to Generate a @ModelAndView for exceptions
+     */
+    private ModelAndView GenerateModelAndViewForExceptions(Exception exception, String s, String s2) {
+        log.error(s);
+
+        ModelAndView modelAndView = new ModelAndView();
+        modelAndView.setViewName(s2);
+        modelAndView.addObject("exception", exception);
+
+        return modelAndView;
     }
 }
